[gd_scene load_steps=2 format=1]

[ext_resource path="res://asset scenes/reply.gd" type="Script" id=1]

[node name="reply" type="Label"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 14.0
text = "This is a reply"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
script/script = ExtResource( 1 )

[connection signal="input_event" from="." to="." method="_on_reply_input_event"]

[connection signal="mouse_enter" from="." to="." method="_on_reply_mouse_enter"]

[connection signal="mouse_exit" from="." to="." method="_on_reply_mouse_exit"]


